--- a/MvcWithAngularJS2/AngularJS2Setup/AngularJS2Setup.csproj
+++ b/MvcWithAngularJS2/AngularJS2Setup/AngularJS2Setup.csproj
@@ -144,6 +144,7 @@
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
+    <TypeScriptCompile Include="app\app.component.ts" />
     <TypeScriptCompile Include="app\app.module.ts" />
     <TypeScriptCompile Include="app\home\welcome.component.ts" />
     <TypeScriptCompile Include="app\main.ts" />
