Created couple of components and used them in index.html

--- a/MvcWithAngularJS2/AngularJS2Setup/AngularJS2Setup.csproj
+++ b/MvcWithAngularJS2/AngularJS2Setup/AngularJS2Setup.csproj
@@ -93,6 +93,7 @@
   <ItemGroup>
     <Content Include="app\assets\images\logo.jpg" />
     <Content Include="app\home\welcome.component.html" />
+    <Content Include="app\movies\movie-list.component.html" />
     <Content Include="app\shared\review.component.css" />
     <Content Include="app\shared\review.component.html" />
     <Content Include="Content\bootstrap.css" />
@@ -108,7 +109,9 @@
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="styles.css" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -148,6 +151,7 @@
     <TypeScriptCompile Include="app\app.module.ts" />
     <TypeScriptCompile Include="app\home\welcome.component.ts" />
     <TypeScriptCompile Include="app\main.ts" />
+    <TypeScriptCompile Include="app\movies\movie-list.component.ts" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
