Implemented rating component and click event to show a message on page. Unfortunately not working in chrome due to cache!

--- a/MvcWithAngularJS2/AngularJS2Setup/AngularJS2Setup.csproj
+++ b/MvcWithAngularJS2/AngularJS2Setup/AngularJS2Setup.csproj
@@ -155,6 +155,7 @@
     <TypeScriptCompile Include="app\movies\movie-filter.pipe.ts" />
     <TypeScriptCompile Include="app\movies\movie-list.component.ts" />
     <TypeScriptCompile Include="app\movies\movie.ts" />
+    <TypeScriptCompile Include="app\shared\review.component.ts" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
