Createad Movie.Service and used it inside the movie component.

--- a/MvcWithAngularJS2/AngularJS2Setup/AngularJS2Setup.csproj
+++ b/MvcWithAngularJS2/AngularJS2Setup/AngularJS2Setup.csproj
@@ -154,6 +154,7 @@
     <TypeScriptCompile Include="app\main.ts" />
     <TypeScriptCompile Include="app\movies\movie-filter.pipe.ts" />
     <TypeScriptCompile Include="app\movies\movie-list.component.ts" />
+    <TypeScriptCompile Include="app\movies\movie.service.ts" />
     <TypeScriptCompile Include="app\movies\movie.ts" />
     <TypeScriptCompile Include="app\shared\review.component.ts" />
   </ItemGroup>
