From videos 8.1 and 8.2 added routing and other classes - just copied as mentioned in the videos because they were already built in and author was just went through them - did not created on the fly!

--- a/MvcWithAngularJS2/AngularJS2Setup/AngularJS2Setup.csproj
+++ b/MvcWithAngularJS2/AngularJS2Setup/AngularJS2Setup.csproj
@@ -105,6 +105,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="api\movies\movies.json" />
     <Content Include="app\movies\movie-list.component.css" />
+    <Content Include="app\movies\movie-detail.component.html" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -150,13 +151,18 @@
   <ItemGroup>
     <TypeScriptCompile Include="app\app.component.ts" />
     <TypeScriptCompile Include="app\app.module.ts" />
+    <TypeScriptCompile Include="app\app.routing.ts" />
     <TypeScriptCompile Include="app\home\welcome.component.ts" />
     <TypeScriptCompile Include="app\main.ts" />
+    <TypeScriptCompile Include="app\movies\movie-detail.component.ts" />
     <TypeScriptCompile Include="app\movies\movie-filter.pipe.ts" />
     <TypeScriptCompile Include="app\movies\movie-list.component.ts" />
+    <TypeScriptCompile Include="app\movies\movie.module.ts" />
+    <TypeScriptCompile Include="app\movies\movie.routing.ts" />
     <TypeScriptCompile Include="app\movies\movie.service.ts" />
     <TypeScriptCompile Include="app\movies\movie.ts" />
     <TypeScriptCompile Include="app\shared\review.component.ts" />
+    <TypeScriptCompile Include="app\shared\shared.module.ts" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
